# tiny-render

./: .clang-format  .clang_format  .clang_tidy  .dir-locals.el  .gitignore  CMakeLists.txt  CMakePresets.json  README.org  vcpkg.json
.github/workflows/: cross_platform_build.yml
lib/: CMakeLists.txt
lib/tga-lib/: CMakeLists.txt  tgaimage.cpp  tgaimage.hpp
scripts/: install_vcpkg.bat  install_vcpkg.sh
src/: CMakeLists.txt  common.hpp  formula.cpp  formula.hpp  geometry.hpp  main.cpp  model.cpp  model.hpp  render-methods.cpp  render-methods.hpp  tiny-render.cpp  tiny-render.hpp
tst/: CMakeLists.txt  formula-tests.cpp  main.cpp  tests_include.hpp  tiny-render.cpp
